--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: ONEcampaign # Your GitHub username
-repo: project_upptime # Your Github repository name
+repo: project_status # Your Github repository name
 
 # Add your sites here
 sites:
