--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,7 +1,6 @@
 # Change these first
 owner: ONEcampaign # Your GitHub username
 repo: project_status # Your Github repository name
-
 # Add your sites here
 sites:
   - name: Actionkit
@@ -19,13 +18,13 @@ sites:
   - name: ONE Global Canada
     url: https://www.oneglobalcanada.com
   - name: ONE
-    url: https://www.one.org
+    url: https://www.one.org/
   - name: ONE Africa
     url: https://www.one.org/africa
   - name: Accountability Music Awards
     url: https://www.accountabilitymusicawards.org
   - name: ONE US
-    url: https://www.one.org/us
+    url: https://www.one.org/us/
   - name: Rapidpro
     url: https://one.wafl.chat
   - name: Data
@@ -36,8 +35,6 @@ sites:
     url: https://recruiter.one.org/wp-login.php
   - name: Action Tracker
     url: https://actiontracker.one.org/ping/
-
-
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
   cname: status.one.org
